{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 33,
  "lineage": "7c9ffdb9-31a7-07cb-09fd-bd9063c3d3d3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T09:58:29.756-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-kickstart/global/firewalls/test-fw-allow-http",
            "log_config": [],
            "name": "test-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/networks/test-vpc-for-vm",
            "priority": 1000,
            "project": "terraform-kickstart",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/firewalls/test-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T09:58:29.740-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-kickstart/global/firewalls/test-fw-allow-https",
            "log_config": [],
            "name": "test-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/networks/test-vpc-for-vm",
            "priority": 1000,
            "project": "terraform-kickstart",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/firewalls/test-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T09:58:29.624-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-kickstart/global/firewalls/testapp-fw-allow-rdp",
            "log_config": [],
            "name": "testapp-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/networks/test-vpc-for-vm",
            "priority": 1000,
            "project": "terraform-kickstart",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/firewalls/testapp-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T09:58:29.824-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-kickstart/global/firewalls/testapp-fw-allow-ssh",
            "log_config": [],
            "name": "testapp-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/networks/test-vpc-for-vm",
            "priority": 1000,
            "project": "terraform-kickstart",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/firewalls/testapp-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-9-v20240313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/zones/europe-west4-a/disks/test"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-kickstart/zones/europe-west4-a/instances/test",
            "instance_id": "5939981542022547407",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "btwYcWqkhAM=",
            "name": "test",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.174.218",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/networks/default",
                "network_ip": "10.164.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "terraform-kickstart"
              }
            ],
            "project": "terraform-kickstart",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/zones/europe-west4-a/instances/test",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-kickstart/global/networks/test-vpc-for-vm",
            "mtu": 0,
            "name": "test-vpc-for-vm",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2978164273565501424",
            "project": "terraform-kickstart",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/networks/test-vpc-for-vm"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "test_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-02T09:58:30.177-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/terraform-kickstart/regions/europe-west1/subnetworks/test-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "test-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/global/networks/test-vpc-for-vm",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-kickstart",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-kickstart/regions/europe-west1/subnetworks/test-public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}